--- a/registro.html
+++ b/registro.html
@@ -77,11 +77,17 @@ p {
     </div>
     <div class="checkbox">
       <label><input type="checkbox" id="check" required> He leído y acepto las condiciones</label>
-    </div>
-<button type="button" class="btn btn-default" id=button>Confirmar</button>
+	  <input type="submit" value="Comfirmar" onclick="marcado();"
+	    </div>
+
   </form>
 </div>
     <script src="registro.js"></script>
  </body>
 </html>
+
+
+
+
+
 
